Chnaged flash message. Warm -> white.

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                 <input type="submit" class="btn" name="red" value="Red">
                 <input type="submit" class="btn" name="green" value="Green">
                 <input type="submit" class="btn" name="blue" value="Blue">
-                <input type="submit" class="btn" name="warm" value="Warm">
+                <input type="submit" class="btn" name="warm" value="White">
             </form>
      </div>
 </div>
